--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,4 +7,4 @@
     args:
       host: "{{ ansible_host | default(ansible_ssh_host | default(inventory_hostname)) }}"
       port: "{{ ansible_port | default(ansible_ssh_port | default (22)) }}"
-      search_regex: "SSH"
+      search_regex: "{{ ssh_banner_regex }}"
